fix: post tag wrap margin

--- a/themes/material-flow/source/less/_main.less
+++ b/themes/material-flow/source/less/_main.less
@@ -57,11 +57,11 @@
       }
 
       .full-width {
-        margin-left: -@gap;
-        margin-right: -@gap;
+        margin-left: -1.5 * @gap;
+        margin-right: -1.5 * @gap;
         padding-left: @gap;
         padding-right: @gap;
-        width:~"calc(100% + 2 * @{gap})"
+        width:~"calc(100% + 3* @{gap})"
       }
 
       .auto-padding {
